--- a/k8s/apps/mucaron/back/deployment.yaml
+++ b/k8s/apps/mucaron/back/deployment.yaml
@@ -87,5 +87,5 @@ spec:
         emptyDir: {}
       - name: tmp
         persistentVolumeClaim:
-          claimName: mucaron-encode-dir
+          claimName: mucaron-encode-tmp
 
