--- a/k8s/apps/mucaron/back/kustomization.yaml
+++ b/k8s/apps/mucaron/back/kustomization.yaml
@@ -3,9 +3,10 @@ kind: Kustomization
 labels:
 - includeSelectors: true
   pairs:
-    app: mucaron-backend
+    app: mucaron-encode-tmp
 resources:
 - deployment.yaml
 - service.yaml
 - image-policy.yaml
 - externalsecret.yaml
+- pvc.yaml
