--- a/k8s/apps/mucaron/back/pvc.yaml
+++ b/k8s/apps/mucaron/back/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mucaron
+  name: mucaron-encode-tmp
 spec:
   storageClassName: longhorn
   accessModes:
