--- a/k8s/apps/mucaron/back/externalsecret.yaml
+++ b/k8s/apps/mucaron/back/externalsecret.yaml
@@ -24,5 +24,5 @@ spec:
       property: session_secret
   - secretKey: minio_secret_key
     remoteRef:
-      key: minio
+      key: mucaron
       property: secret_key
