--- a/k8s/apps/mucaron/back/externalsecret.yaml
+++ b/k8s/apps/mucaron/back/externalsecret.yaml
@@ -25,4 +25,4 @@ spec:
   - secretKey: minio_secret_key
     remoteRef:
       key: mucaron
-      property: secret_key
+      property: minio_secret_key
