--- a/k8s/apps/mucaron/back/deployment.yaml
+++ b/k8s/apps/mucaron/back/deployment.yaml
@@ -82,6 +82,14 @@ spec:
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
         volumeMounts:
         - name: mucaron-log
           mountPath: /var/log/mucaron
