--- a/k8s/apps/mucaron/back/deployment.yaml
+++ b/k8s/apps/mucaron/back/deployment.yaml
@@ -21,6 +21,7 @@ spec:
         - containerPort: 8080
         resources:
           requests:
+            cpu: "10m"
             memory: 512Mi
           limits:
             cpu: "2"
