--- a/k8s/apps/mucaron/back/deployment.yaml
+++ b/k8s/apps/mucaron/back/deployment.yaml
@@ -45,7 +45,7 @@ spec:
         - name: PSQL_SSLMODE
           value: "disable"
         - name: MINIO_ENDPOINT
-          value: "https://minio.walnuts.dev"
+          value: "minio.walnuts.dev"
         - name: MINIO_ACCESS_KEY
           value: "oZzVGMWfbXtGtuzgPd3R"
         - name: MINIO_SECRET_KEY
