--- a/k8s/apps/mucaron/ingress.yaml
+++ b/k8s/apps/mucaron/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: mucaron
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: 10G
 spec:
   ingressClassName: "nginx"
   rules:
