fix path https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/35770
Signed-off-by: walnuts1018 <r.juglans.1018@gmail.com>

--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -62,7 +62,7 @@ spec:
         tls:
           insecure: true
       otlphttp/loki:
-        endpoint: http://loki-gateway.monitoring.svc.cluster.local/otlp/v1/logs
+        endpoint: http://loki-gateway.monitoring.svc.cluster.local/otlp
         tls:
           insecure: true
     service:
