--- a/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
@@ -42,6 +42,7 @@ spec:
         - node
         - pod
         - container
+        - volume
     processors:
       memory_limiter:
         check_interval: 1s
