--- a/renovate.json5
+++ b/renovate.json5
@@ -7,6 +7,9 @@
   flux: {
     enabled: false,
   },
+  kubernetes: {
+    fileMatch: ["k8s/.+\\.yaml$"],
+  },
   customManagers: [
     {
       customType: "regex",
